# tavist

./: .gitignore  main.py  package-lock.json  pyproject.toml  temp
tavist/: controller.py  model.py  tracking.py
tests/: test_controller.py  test_rules.py  test_tavist.py
