[tool.poetry]
name = "tavist"
version = "0.1.0"
description = ""
authors = ["Rhett D. Hudson, Ph.D. <rhett.hudson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
PySide6 = "^6.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
